Fixed lock scroll bar overflow

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -41,7 +41,8 @@
     font-family: var(--font);
     font-size: 2rem;
     /* scroll-behavior: smooth; */
-    overflow-y:hidden;
+    /* overflow-y:hidden; */
+    overflow-y:overlay;
     height: 100%;
 }
 
@@ -56,6 +57,8 @@ body {
     overflow-x: hidden;
     color: var(--text-color);
     background-color: var(--gray-light-color);
+    overflow-y:overlay;
+    /* scroll-behavior: smooth; */
 }
 
 
@@ -824,6 +827,7 @@ a.modal-close svg path{
 
 .un-lock-scroll {
     overflow-y: visible ;
+    /* overflow-y: scroll ; */
 }
 
 #alert_modal_message{
@@ -867,7 +871,6 @@ a.modal-close svg path{
 
 @media screen and (min-width: 1024px){
     :root {
-    
         --max-width: 1200px;
         --header-height: 2rem;
         --search-height: 1.3rem;
